# clockalong

./: .gitignore  .prettierignore  .tool-versions  AGENTS.md  README.md  eslint.config.mjs  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
.agents/docs/: architecture.md  authentication.md  clockify.md  distribution.md  github.md  index.md  linear.md  logging.md  project.md  quick-timers.md  storage.md  tauri.md  time-tracking.md
.conductor/: settings.toml
scripts/: conductor-run.sh  conductor-setup.sh  generate-clockify-client.mjs  generate-updater-manifest.mjs  prepare-clockify-specs.mjs  publish-github-release.sh  release-mac.sh
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns  icon_512x512@2x.icns
src-tauri/src/: app_initialization.rs  app_logs.rs  auth.rs  auth_clockify.rs  auth_github.rs  auth_linear.rs  clinear_auth.rs  lib.rs  main.rs  storage_config.rs  stronghold.rs  stronghold_config.rs
src/components/: AppHeader.tsx  AppSettings.tsx  AppToaster.tsx  ClinearLogo.tsx  ClockalongLogo.tsx  ClockifyAuthDialog.tsx  ClockifySettings.tsx  ClockifyWidget.tsx  GitHubAuthDialog.tsx  GitHubSettings.tsx  GitHubWidget.tsx  LinearSettings.tsx  LinearWidget.tsx  MoonBunnyLogo.tsx  PageHeader.tsx  QuickTimersSettings.tsx  QuickTimersWidget.tsx  TrackingSummaryCells.tsx
src/components/icons/: ClockifyIcon.tsx  LinearIcon.tsx
src/components/settings/: SettingsSection.tsx
src/hooks/: useAppAuth.ts  useAppInit.ts  useAppInitState.ts  useAppLogs.ts  useAppUpdates.tsx  useClockifyDefaults.ts  useDevTools.ts  useTauriAppInitializationState.ts  useTauriAppLogs.ts  useTauriClinearAuthState.ts
src/lib/: logging.ts  query-client.ts
src/routes/: __root.tsx  _app.dashboard.tsx  _app.settings.tsx  _app.tsx  _auth.sign-in.tsx  _auth.tsx  index.tsx
src/services/clockify/: auth.ts  client.ts  description-template.ts  index.ts  overlaps.ts  projects.ts  sync-settings.ts  sync.ts  ticket-summaries.ts  work-item-summaries.ts
src/services/github/: auth.ts  client.ts  description-template.ts  sync-settings.ts  sync.ts  work-item-summaries.ts
src/services/linear/: auth.ts  client.ts  sync.ts  ticket-settings.ts  ticketSorting.ts  tickets-sorting.ts  tickets.ts
src/services/storage/: config.ts  storage.ts  useStorage.ts
src/services/tauri/: app-client.ts  appUpdates.ts  auth-client.ts  (+1 more)
src/utils/: colors.ts  console-logging.ts  createTauriReactiveStateHook.ts  errors.ts  provider-registry.tsx  templates.ts
(+2 files in other folders)
