[package]
name = "clinear"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "clinear_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
base64 = "0.22.1"
iota_stronghold = "2.1.0"
log = "0.4.29"
rand = "0.9.4"
reqwest = { version = "0.13.3", features = ["form", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
tauri = { version = "2.11.1", features = [] }
tauri-plugin-log = "2.8.0"
tauri-plugin-mcp-bridge = "0.11"
tauri-plugin-opener = "2.5.4"
tauri-plugin-store = "2.4.3"
tauri-plugin-stronghold = "2.3.1"
url = "2.5.8"
