[package]
name = "clinear"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "clinear_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
base64 = "0.22.1"
iota_stronghold = "2.1.0"
log = "0.4.33"
rand = "0.10.1"
reqwest = { version = "0.13.4", features = ["form", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2.8.0"
tauri-plugin-mcp-bridge = "0.11"
tauri-plugin-opener = "2.5.4"
tauri-plugin-process = "2.3.1"
tauri-plugin-store = "2.4.3"
tauri-plugin-stronghold = "2.3.1"
tauri-plugin-updater = "2.10.1"
tokio = { version = "1.52.3", features = ["sync", "time"] }
url = "2.5.8"
